--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorBackground">
+    android:background="@color/colorBackground"
+    android:orientation="vertical"
+    android:padding="24dp">
 
     <TextView
-        android:text="Host ID"
-        android:textSize="18sp"
-        android:textColor="?attr/colorOnBackground"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Host ID"
+        android:textColor="?attr/colorOnBackground"
+        android:textSize="18sp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/pcIdInputLayout"
@@ -21,46 +21,45 @@
         android:layout_height="wrap_content"
         android:hint="Remote Host ID"
         app:boxBackgroundMode="outline"
-        app:boxCornerRadiusTopStart="12dp"
-        app:boxCornerRadiusTopEnd="12dp"
-        app:boxCornerRadiusBottomStart="12dp"
         app:boxCornerRadiusBottomEnd="12dp"
-        app:boxStrokeColor="?attr/colorPrimary"
-        app:startIconDrawable="">
+        app:boxCornerRadiusBottomStart="12dp"
+        app:boxCornerRadiusTopEnd="12dp"
+        app:boxCornerRadiusTopStart="12dp"
+        app:boxStrokeColor="?attr/colorPrimary">
 
         <AutoCompleteTextView
             android:id="@+id/autoCompletePcId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
             android:completionThreshold="1"
             android:inputType="text"
             android:textColor="?attr/colorOnBackground"
-            android:textColorHint="@color/hint_gray" />
+            android:textColorHint="@color/colorPrimary"
+            android:textSize="30dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonConnect"
-        android:text="CONNECT"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:cornerRadius="12dp"
+        android:text="CONNECT"
+        android:textColor="?attr/colorOnSecondary"
         app:backgroundTint="?attr/colorSecondary"
-        android:textColor="?attr/colorOnSecondary" />
+        app:cornerRadius="12dp" />
 
     <TextView
-        android:text="Recently connected PCs:"
-        android:textStyle="bold"
-        android:textColor="?attr/colorOnBackground"
-        android:layout_marginTop="32dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Recently connected PCs:"
+        android:textColor="?attr/colorOnBackground"
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewHistory"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:layout_weight="1" />
 </LinearLayout>
