--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_connect"
-        android:icon="@drawable/ic_pc"
-        android:title="TODO" />
+        android:icon="@drawable/connect"
+        android:title="Connect" />
     <item
         android:id="@+id/nav_control"
-        android:icon="@drawable/ic_control"
+        android:icon="@drawable/control"
         android:title="Control" />
     <item
         android:id="@+id/nav_layout"
-        android:icon="@drawable/ic_layout"
+        android:icon="@drawable/layout"
         android:title="Layout" />
     <item
         android:id="@+id/nav_more"
