--- a/app/src/main/res/layout/item_pc_history.xml
+++ b/app/src/main/res/layout/item_pc_history.xml
@@ -46,7 +46,7 @@
                 android:minHeight="0dp"
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="4dp"
-                android:text="Connect"
+                android:text="@string/connect_button"
                 android:textSize="16sp"
                 android:textColor="?attr/colorOnSecondary"
                 app:backgroundTint="?attr/colorSecondary"
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Status: Online"
+            android:text="@string/status_online"
             android:textColor="?attr/colorOnBackground"
             android:textSize="14sp" />
     </LinearLayout>
