--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_in"
+        android:text="@string/login"
         android:textSize="26sp"
         android:textStyle="bold"
         android:textColor="?attr/colorOnBackground"
@@ -83,7 +83,7 @@
         android:id="@+id/buttonLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sign_in"
+        android:text="@string/login"
         app:cornerRadius="12dp"
         android:textColor="?attr/colorOnSecondary"
         app:backgroundTint="?attr/colorSecondary"
