update connected PC history + handle mouse movement and keyboard keycode

--- a/app/src/main/res/layout/activity_remote.xml
+++ b/app/src/main/res/layout/activity_remote.xml
@@ -1,14 +1,62 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/remote_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- SurfaceViewRenderer để hiển thị màn hình PC từ WebRTC -->
+    <!-- Màn hình stream từ PC -->
     <org.webrtc.SurfaceViewRenderer
         android:id="@+id/remote_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
+    <!-- Panel điều khiển -->
+    <LinearLayout
+        android:id="@+id/control_panel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@color/colorOverlay"
+        android:padding="12dp"
+        android:layout_gravity="top|center"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/btn_keyboard"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_keyboard"
+            android:contentDescription="Keyboard"
+            android:layout_marginRight="6dp"/>
+
+        <ImageView
+            android:id="@+id/btn_layout"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/layout"
+            android:contentDescription="Layout"
+            android:layout_marginLeft="6dp"/>
+    </LinearLayout>
+
+    <!-- Handle nằm riêng, luôn hiển thị -->
+    <ImageView
+        android:id="@+id/handle_panel"
+        android:layout_width="32dp"
+        android:layout_height="16dp"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginTop="0dp"
+        android:background="@drawable/bg_half_circle"
+        android:src="@drawable/ic_down"
+        android:scaleType="center"
+        android:contentDescription="Toggle Panel" />
+
+    <com.kiddo.remotescreen.util.SilentEditText
+        android:id="@+id/hidden_input"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        android:alpha="0"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:background="@android:color/transparent"/>
 </FrameLayout>
