--- a/app/src/main/res/layout/item_pc_history.xml
+++ b/app/src/main/res/layout/item_pc_history.xml
@@ -50,7 +50,7 @@
                 android:textSize="16sp"
                 android:textColor="?attr/colorOnSecondary"
                 app:backgroundTint="?attr/colorSecondary"
-                app:cornerRadius="8dp"/>
+                app:cornerRadius="8dp" />
         </LinearLayout>
 
         <TextView
@@ -60,6 +60,7 @@
             android:layout_marginTop="4dp"
             android:text="@string/status_online"
             android:textColor="?attr/colorOnBackground"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            tools:text="Status: Available" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
