--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="colorOnSecondary">#000000</color>
     <color name="colorOnBackground">#000000</color>
     <color name="gray">#BDBDBD</color>
+
+    <color name="green">#4CAF50</color>
+    <color name="red">#FF0000</color>
+    <color name="colorOverlay">#1A000000</color>
 </resources>
