--- a/app/src/main/res/layout/item_pc_history.xml
+++ b/app/src/main/res/layout/item_pc_history.xml
@@ -61,6 +61,6 @@
             android:text="@string/status_online"
             android:textColor="?attr/colorOnBackground"
             android:textSize="14sp"
-            tools:text="Status: Available" />
+            tools:text="Status: Remote disabled" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
