--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,17 @@
         <item name="android:textSize">12sp</item>
         <item name="cornerRadius">24dp</item>
     </style>
+
+    <style name="KbKey">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">30dp</item> <!-- thấp hơn để nhỏ -->
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">9sp</item> <!-- nhỏ hơn nữa -->
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:textColor">@color/colorOnBackground</item>
+        <item name="android:background">@drawable/background_kb_button</item>
+    </style>
 </resources>
