--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -5,5 +5,5 @@
     <corners android:radius="24dp" />
     <stroke
         android:width="1dp"
-        android:color="?attr/colorOnBackground" />
+        android:color="?attr/colorPrimary" />
 </shape>
